# libwarframe

./: .gitmodules  CMakeLists.txt  README.md
include/: debug.h  helpers.h  network.h  warframe.h  wf_defs.h  worldstate.h
lib/lzma/: CMakeLists.txt  README.md
src/: network.c  warframe.c  wf.c  wfm.c
